@@ -1,0 +1,65 @@
+#!/bin/sh
+
+# if app not exist
+[ -x /bin/transmission-daemon ] || exit 0
+
+#wait to start web and run from goahead code
+. /etc/scripts/web_wait.sh
+web_wait
+
+
+LOG="logger -t transmission"
+
+start() {
+[ -d /media ] || exit 0
+[ "`pidof transmission-daemon`" ] && exit 1
+ServiceEnabled=`nvram_get 2860 TransmissionEnabled`
+if [ "$ServiceEnabled" = "1" ]; then
+    get_param
+
+    [ -n $TRANSMISSION_HOME ] || exit 1
+
+    export TRANSMISSION_HOME
+    /bin/transmission-daemon
+    $LOG "Started Transmission."
+
+fi
+}
+
+stop() {
+    if [ "`pidof transmission-daemon`" ]; then
+	$LOG "Stop Transmission."
+	killall -q transmission-daemon > /dev/null
+	killall -q -SIGKILL transmission-daemon > /dev/null
+    fi
+}
+
+get_param() {
+    mounted=`df -h | grep "/dev/sd" | grep "media" | awk {' print $6 '}`
+    for point in $mounted; do
+	[ -f "$point/.config/torrent/settings.json" ] && TRANSMISSION_HOME="$point/.config/torrent"
+    done
+}
+
+case "$1" in
+        start)
+            start
+            ;;
+
+	stop)
+            stop
+            ;;
+
+	restart)
+            stop
+            start
+            ;;
+
+	reload)
+            killall -HUP transmission-daemon
+            ;;
+
+        *)
+            echo $"Usage: $0 {start|stop|restart|reload}"
+            exit 1
+esac
