@@ -660,6 +660,7 @@
 41) Asinc blink wps/sec led if goahead not found.<br>
 42) Update rw_init bin files for RT3x5x and add images for new chips.<br>
 43) Fix some fields enable/disable in skb.<br>
+44) Add init script for transmission daemon.<br>
 
 suspended) Add skb reuse support.<br>
 suspended) Nvram move to kernel mode. This fix some memleaks and concurent acess to mtd issue.<br>
